--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ritu convention center</title>
+    <!-- google font added -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- custom css added -->
+    <link rel="stylesheet" href="style.css">
+    <!-- bootstrap added -->
+
 </head>
 
 <body>
-
+    <h1>hello world</h1>
 </body>
 
 </html>
