--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- header part -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Ritu Convention center</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -47,6 +47,55 @@
                 </div>
             </div>
         </nav>
+        <!-- banner carausel -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img style="width:1380px  !important; height:600px !important;" src="images/pic1.jpg"
+                        class="d-block w-80  img-fluid m-auto" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>The perfect venue for your</h1>
+                        <h1>next event</h1>
+                        <p>Want to make some life time memory? Join With us.</p>
+                        <button type="button" class="btn btn-light"><a href="">Book Now</a></button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img style="width: 1380px !important; height:600px !important ;" src="images/pic2.jpg"
+                        class="d-block w-75 img-fluid m-auto" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Beautiful Design for Indoor Activities.</h5>
+                        <p>The intorior design is so Beautiful.it's would be your dream place.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img style="width: 1380px !important; height: 600px !important; " src="images/pic3.jpg"
+                        class="d-block w-75 img-fluid m-auto" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Our out door is as wonderfull as Haven.</h5>
+                        <p>Our outdoor dececoration is so nice with beautiful landscape.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
