--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- bootstrap added -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- font awosome added -->
+    <script src="https://kit.fontawesome.com/80aa374bc1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -97,9 +99,111 @@
             </button>
         </div>
     </header>
+    <main>
+        <section>
+            <!-- toast alart added -->
+            <div class="alert alert-success alert-dismissible" role="alert"
+                style="width: 20%;height: 45px; padding-top:5px; background-color: green;color: honeydew; ">
+                <button class="btn-close" data-bs-dismiss="alart" aria-label="close">
+
+                </button>
+                <P style="font-weight: bold;"><i class="fas fa-tags"></i> Get 22% off for 2022</P>
+            </div>
+
+        </section>
+        <!-- package section  -->
+        <section>
+            <div class="row ms-5">
+                <div class="col-3 mt-5">
+                    <div class="card " style="width: 17rem;height: 25rem;">
+                        <div class="card-body">
+                            <h4 class="card-title">$ 300</h4>
+                            <h5>Business Fair</h5>
+                            <p>For most businesses event
+                                like book fair, craft fair.</p>
+                            <p><i class="far fa-check-circle"></i> limited space access.</p>
+                            <p><i class="far fa-check-circle"></i> Secuirty facility.</p>
+                            <p><i class="far fa-check-circle"></i> event support.</p>
+                            <p><i class="far fa-check-circle"></i> Decoration design.</p>
+                            <p><i class="far fa-check-circle"></i> Per day bill.</p>
+                            <button type="button" class="btn btn-danger  ms-5 "><a
+                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                                    href="">Choose
+                                    Plan</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mt-5">
+                    <div class="card" style="width: 17rem; height: 25rem;">
+                        <div class="card-body">
+                            <h4 class="card-title">$ 600</h4>
+                            <h5>Wedding gold</h5>
+                            <p>This is the best wedding deal we ever offer.</p>
+                            <p><i class="far fa-check-circle"></i> Full space access.</p>
+                            <p><i class="far fa-check-circle"></i> Food arrangement.</p>
+                            <p><i class="far fa-check-circle"></i> mangement support</p>
+                            <p><i class="far fa-check-circle"></i> Decoration design.</p>
+                            <p><i class="far fa-check-circle"></i> Billed as shift</p>
+                            <button type="button" class="btn btn-danger  ms-5 "><a
+                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                                    href="">Choose
+                                    Plan</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mt-2">
+                    <div class="card bg-info" style="width: 17rem; height:29rem; ">
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                            Best selling
+                            <span class="visually-hidden">unread messages</span>
+                        </span>
+                        <div class="card-body">
+                            <h4 class="card-title">$ 1200</h4>
+                            <h5>Wedding platinum</h5>
+                            <p>This is the best package in premium wedding.Everything is well maintained by us.Just book
+                                and celebraty. </p>
+                            <p><i class="far fa-check-circle"></i> Full space access.</p>
+                            <p><i class="far fa-check-circle"></i> Dedicated team</p>
+                            <p><i class="far fa-check-circle"></i> Buffet food</p>
+                            <p><i class="far fa-check-circle"></i> premium Decoration.</p>
+                            <p><i class="far fa-check-circle"></i> pay as plan</p>
+                            <button type="button" class="btn btn-danger  ms-5 "><a
+                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                                    href="">Choose
+                                    Plan</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mt-5">
+                    <div class="card" style="width: 17rem; height:25rem">
+                        <div class="card-body">
+                            <h4 class="card-title">$ 1400</h4>
+                            <h5>Corporate program</h5>
+                            <p>We provide market best corporate program services.</p>
+                            <p><i class="far fa-check-circle"></i> Full space access.</p>
+                            <p><i class="far fa-check-circle"></i> Dedicated team</p>
+                            <p><i class="far fa-check-circle"></i> Buffet food</p>
+                            <p><i class="far fa-check-circle"></i> Seminer room</p>
+                            <p><i class="far fa-check-circle"></i> Cultural fest</p>
+                            <button type="button" class="btn btn-danger  ms-5 "><a
+                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                                    href="">Choose
+                                    Plan</a></button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
