--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
         </div>
         <!-- package section  -->
         <section class="container mx-auto">
-            <div class="row  mt-5">
+            <h1 class="text-center">
+                Our package
+            </h1>
+            <div class="row  mt-5 mx-auto">
                 <div class="col-lg-3 col-sm-1 mt-5">
                     <div class="card shadow-lg " style="width: 17rem;height: 25rem;">
                         <div class="card-body">
@@ -196,6 +199,62 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+        <!-- accrodian added  -->
+        <section class="container mt-5">
+            <h5 class="text-center mb-5">Frequently Ask Question</h5>
+            <div class="row">
+                <div class="col-lg-8 col-sm-1">
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    Where is Your location?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body"> Now We are avalabile in Dhaka and cox'bazar.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-collapseTwo">
+                                    There are any transportation facilities?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                    Of course Yes. We have all type of transport facilities.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    What's the booking policy?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                    You can book with pay 50% of total cost.then we reserve for you.
+                                    you can pay by mastercard.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-1">
+                    <img class="img-fluid" src="images/faq.jpg" alt="">
+                </div>
             </div>
         </section>
     </main>
