--- a/index.html
+++ b/index.html
@@ -258,8 +258,21 @@
             </div>
         </section>
     </main>
-    <footer>
 
+
+    <footer>
+        <section class="contrainer bg-dark d-flex justify-content-around">
+            <div>
+                <p style="color: honeydew;">&copy; 2022 bilash. All sereved.</p>
+            </div>
+            <div>
+                <p style="color: honeydew;">Get the app:</p>
+                <a href="https://play.google.com/store/search?q=programming%20hero&c=apps" target="_blank"> <img
+                        style="width: 55px; height: 25px;" src="images/googlelogo.png" alt=""></a>
+                <a href="https://www.apple.com/us/search/programming-hero?src=globalnav" target="_blank"> <img
+                        style="width: 55px; height: 25px;" src="images/applelogo.png" alt=""></a>
+            </div>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
