--- a/index.html
+++ b/index.html
@@ -257,10 +257,50 @@
                 </div>
             </div>
         </section>
+        <!-- sign up from  -->
+        <section class="container mt-5">
+            <h2 class="text-center">Ritu Matrimonial service.</h2>
+            <h3 class="text-center">Havenly Match</h3>
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="images/18915851.jpg" alt="">
+                </div>
+                <div class="col-lg-6 mt-5">
+                    <h1>Are you single?</h1>
+                    <h4>Wants to marry?</h4>
+                    <p>Don't Worry. sign up and chill with us.</p>
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Your Full Name</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Please make sure its valid.</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Please make sure its valid.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Please make sure its valid.</div>
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                    </form>
+                </div>
+            </div>
+
+        </section>
     </main>
 
-
+    <!-- footer  -->
     <footer>
+        <!-- footer section  -->
         <section class="contrainer bg-dark d-flex justify-content-around">
             <div>
                 <p style="color: honeydew;">&copy; 2022 bilash. All sereved.</p>
