--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h1>The perfect venue for your</h1>
                         <h1>next event</h1>
                         <p>Want to make some life time memory? Join With us.</p>
-                        <button type="button" class="btn btn-light"><a href="">Book Now</a></button>
+                        <button type="button" class="btn btn-light"><a href="book.html">Book Now</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
