--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </section>
         <!-- sign up from  -->
         <section class="container mt-5">
-            <h2 class="text-center">Ritu Matrimonial service.</h2>
+            <h2 class="text-center">Ritu Matrimonial service</h2>
             <h3 class="text-center">Havenly Match</h3>
             <div class="row">
 
@@ -308,9 +308,9 @@
             <div>
                 <p style="color: honeydew;">Get the app:</p>
                 <a href="https://play.google.com/store/search?q=programming%20hero&c=apps" target="_blank"> <img
-                        style="width: 55px; height: 25px;" src="images/googlelogo.png" alt=""></a>
+                        style="width: 65px; height: 40px;" src="images/googlelogo.png" alt=""></a>
                 <a href="https://www.apple.com/us/search/programming-hero?src=globalnav" target="_blank"> <img
-                        style="width: 55px; height: 25px;" src="images/applelogo.png" alt=""></a>
+                        style="width: 65px; height: 40px;" src="images/applelogo.png" alt=""></a>
             </div>
         </section>
     </footer>
