--- a/index.html
+++ b/index.html
@@ -104,6 +104,22 @@
         </div>
     </header>
     <main>
+        <section class="container mt-5">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="images/photography.png" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <h1>Every Moment is Beautiful.</h1>
+                    <p>One day we are become older. When we live alone we memorise our golden day with photograp.We
+                        understand your feeling so, we have professionl photographer to capture your golden times. </p>
+                    <br>
+                    <button class="btn " style="background-color: lightcoral; color: white;">Explore Our photo Album
+                    </button>
+                </div>
+
+            </div>
+        </section>
         <!-- toast added  -->
         <div class="m-4">
             <div class="toast fade show" id="myToast">
@@ -132,8 +148,8 @@
                             <p><i class="far fa-check-circle"></i> event support.</p>
                             <p><i class="far fa-check-circle"></i> Decoration design.</p>
                             <p><i class="far fa-check-circle"></i> Per day bill.</p>
-                            <button type="button" class="btn btn-danger  ms-5 "><a
-                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                            <button type="button" class="btn  ms-5 " style="background-color: lightcoral;"><a
+                                    style="text-decoration: none; font-weight: bold; color: whitesmoke !important; "
                                     href="">Choose
                                     Plan</a></button>
                         </div>
@@ -150,8 +166,8 @@
                             <p><i class="far fa-check-circle"></i> mangement support</p>
                             <p><i class="far fa-check-circle"></i> Decoration design.</p>
                             <p><i class="far fa-check-circle"></i> Billed as shift</p>
-                            <button type="button" class="btn btn-danger  ms-5 "><a
-                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                            <button type="button" class="btn   ms-5 " style="background-color:lightcoral;"><a
+                                    style="text-decoration: none; font-weight: bold; color: white !important; "
                                     href="">Choose
                                     Plan</a></button>
                         </div>
@@ -173,8 +189,8 @@
                             <p><i class="far fa-check-circle"></i> Buffet food</p>
                             <p><i class="far fa-check-circle"></i> premium Decoration.</p>
                             <p><i class="far fa-check-circle"></i> pay as plan</p>
-                            <button type="button" class="btn btn-danger  ms-5 "><a
-                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                            <button type="button" class="btn  ms-5 " style="background-color: lightcoral;"><a
+                                    style="text-decoration: none; font-weight: bold; color: white !important; "
                                     href="">Choose
                                     Plan</a></button>
                         </div>
@@ -191,8 +207,8 @@
                             <p><i class="far fa-check-circle"></i> Buffet food</p>
                             <p><i class="far fa-check-circle"></i> Seminer room</p>
                             <p><i class="far fa-check-circle"></i> Cultural fest</p>
-                            <button type="button" class="btn btn-danger  ms-5 "><a
-                                    style="text-decoration: none; font-weight: bold; color: lavender !important; "
+                            <button type="button" class="btn ms-5 " style="background-color: lightcoral;"><a
+                                    style="text-decoration: none; font-weight: bold; color:white !important; "
                                     href="">Choose
                                     Plan</a></button>
                         </div>
@@ -290,7 +306,8 @@
                                 aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Please make sure its valid.</div>
                         </div>
-                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                        <button type="submit" class="btn  mb-2"
+                            style="background-color: lightcoral; color: white;">Submit</button>
                     </form>
                 </div>
             </div>
