--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </div>
     </header>
     <main>
+        <!-- photogrpher section  -->
         <section class="container mt-5">
             <div class="row">
                 <div class="col-lg-6">
@@ -215,6 +216,47 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+        <!-- clents review section  -->
+        <section class="container mt-5">
+            <h1 class="text-center">Happy Clients says</h1>
+            <br>
+            <div class="row">
+                <div class="col-lg-4 text-lg-center">
+                    <div class="card border-0" style="width: 18rem;">
+                        <img class="img-fluid rounded-circle" src="images/person3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title">Jon Korim</h4>
+                            <h5 class="card-text">
+                                Banker </h5>
+                            <p>They are really good.i am happy.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-lg-center">
+                    <div class="card border-0" style="width: 18rem;">
+                        <img class="img-fluid rounded-circle" src="images/person1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title">Stephen Rahim</h4>
+                            <h5 class="card-text">
+                                doctor </h5>
+                            <p>Perfect decoration.good enough.I really like Ritu the sesson .</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-lg-center">
+                    <div class="card border-0" style="width: 18rem;">
+                        <img class="img-fluid rounded-circle" src="images/person2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title">Michel Khutu</h4>
+                            <h5 class="card-text">
+                                Business Man </h5>
+                            <p>Just Wow.This people are good human,they serve perfectly.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- accrodian added  -->
